--- a/cricinfo/Gemfile
+++ b/cricinfo/Gemfile
@@ -36,7 +36,10 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
-  gem 'byebug'
+  gem 'pry', '~> 0.10.1'
+  gem 'byebug', '~> 8.2.0'
+  gem 'pry-rails'
+  gem 'pry-byebug'
 end
 
 group :development do
